--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <h1>Abraham Goodman</h1>
     <p>Welcome! Below are links to my resume and portfolio:</p>
-    <a href="resume" target="_blank">Resume</a>
-    <a href="portfolio" target="_blank">Portfolio</a>
+    <a href="resume">Resume</a>
+    <a href="portfolio">Portfolio</a>
 </body>
 </html>
