--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
 <header>
     <h1>Abraham Goodman's Portfolio</h1>
     <p>abgoodman1@wpi.edu | 304-319-3670 | Morgantown, WV</p>
-    <p><a href="#" target="_blank">Resume</a> | <a href="https://www.linkedin.com/in/abrahamgoodman" target="_blank">LinkedIn</a></p>
+    <p><a href="https://abrahamgoodman.github.io/portfolio" target="_blank">Resume</a> | <a href="https://www.linkedin.com/in/abrahamgoodman" target="_blank">LinkedIn</a></p>
 </header>
 
 <div class="container">
