--- a/portfolio.html
+++ b/portfolio.html
@@ -71,8 +71,10 @@
                         <li>Unique interactive objects with different mechanics</li>
                     </ul>
                     <h4>Visuals:</h4>
-                    <p>[Placeholder for Screenshot]</p>
-                    <p>[Placeholder for Video Demo]</p>
+                    <video controls style="width:600px; max-width:100%; margin:20px 0;">
+                        <source src="assets/Little Whammo Level Demo.mp4" type="video/mp4">
+                    </video>
+                    <img src="assets/Little Whamlings 1.gif" alt="Little Whamlings Screenshot" style="width:600px; max-width:100%; margin:20px 0;">
                 </div>
             </div>
         </div>
