--- a/portfolio.html
+++ b/portfolio.html
@@ -71,10 +71,20 @@
                         <li>Unique interactive objects with different mechanics</li>
                     </ul>
                     <h4>Visuals:</h4>
-                    <video controls style="width:600px; max-width:100%; margin:20px 0;">
-                        <source src="assets/Little Whammo Level Demo.mp4" type="video/mp4">
-                    </video>
-                    <img src="assets/Little Whamlings 1.gif" alt="Little Whamlings Screenshot" style="width:600px; max-width:100%; margin:20px 0;">
+					<div style="display: flex; justify-content: center; gap: 10px; flex-wrap: wrap;">
+						<!-- Left Column: Video and GIF stacked -->
+						<div style="flex: 1; max-width: 50%; display: flex; flex-direction: column; gap: 10px;">
+							<video controls style="width: 100%; height: auto;">
+								<source src="assets/Little Whammo Level Demo.mp4" type="video/mp4">
+							</video>
+							<img src="assets/Little Whamlings 1.gif" alt="GIF 1" style="width: 100%; height: auto;">
+						</div>
+						
+						<!-- Right Column: Tall GIF -->
+						<div style="flex: 1; max-width: 30%;">
+							<img src="assets/Little Whamlings 2.gif" alt="Tall GIF" style="width: 100%; height: 100%; object-fit: cover;">
+						</div>
+					</div>
                 </div>
             </div>
         </div>
@@ -95,8 +105,9 @@
                         <li>Code import/export for rapid testing between VVVVVV and my editor</li>
                     </ul>
                     <h4>Visuals:</h4>
-                    <p>[Placeholder for Screenshot]</p>
-                    <p>[Placeholder for Video Demo]</p>
+					<div style="text-align: center; margin: 20px 0;">
+						<img src="assets/Gravity Engine.png" alt="Single Image" style="width:800px; max-width:100%; height:auto;">
+					</div>
                 </div>
             </div>
         </div>
@@ -116,7 +127,10 @@
                         <li>Data formatting and visualization</li>
                     </ul>
                     <h4>Visuals:</h4>
-                    <p>[Placeholder for Screenshot]</p>
+					<div style="display: flex; justify-content: center; gap: 10px; max-width: 100%; overflow: hidden;">
+						<img src="assets/iTunes Wrapped 1.png" alt="Image 1" style="width:300px; max-width:45%; height:auto;">
+						<img src="assets/iTunes Wrapped 2.png" alt="Image 2" style="width:300px; max-width:45%; height:auto;">
+					</div>
                 </div>
             </div>
         </div>
@@ -124,7 +138,7 @@
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingProducerRole">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseProducerRole" aria-expanded="false" aria-controls="collapseProducerRole">
-                    Game Development Producer
+                    Hamster Ball Blitz - Producer
                 </button>
             </h2>
             <div id="collapseProducerRole" class="accordion-collapse collapse" aria-labelledby="headingProducerRole" data-bs-parent="#portfolioAccordion">
@@ -137,7 +151,10 @@
                         <li>Facilitated regular team meetings</li>
                     </ul>
                     <h4>Visuals:</h4>
-                    <p>[Placeholder for Screenshot]</p>
+                    <div style="display: flex; justify-content: center; gap: 10px; max-width: 100%; overflow: hidden;">
+						<img src="assets/Hamster Ball Blitz 1.png" alt="Image 1" style="width:400px; max-width:45%; height:auto;">
+						<img src="assets/Hamster Ball Blitz 2.png" alt="Image 2" style="width:400px; max-width:45%; height:auto;">
+					</div>
                 </div>
             </div>
         </div>
