--- a/portfolio.html
+++ b/portfolio.html
@@ -162,7 +162,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2025 Abraham Goodman | <a href="#">Back to Top</a></p>
+    <p><a href="#">Back to Top</a></p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
