--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,8 @@
     
     <p><strong>M.S. in Interactive Media and Game Development</strong> 
         <span style="float:right;">August 2024 – May 2026</span><br>
-        <strong>Worcester Polytechnic Institute</strong>, Worcester, MA</p>
+        <strong>Worcester Polytechnic Institute</strong>, Worcester, MA<br>
+        GPA: 4.0</p>
 
     <p><strong>B.S. in Applied Mathematics and Computer Science</strong> 
         <span style="float:right;">September 2020 – May 2024</span><br>
@@ -100,7 +101,7 @@
     </ul>
 
     <p><strong>SEGO Initiative - Intern</strong> 
-        <span style="float:right;">August 2021 - Present</span></p>
+        <span style="float:right;">August 2021 - February 2025</span></p>
     <ul>
         <li>Collected and organized large amounts of data from events</li>
         <li>Assisted with making social media posts</li>
