--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@
     <h3><strong>PERSONAL PROJECTS</strong></h3>
 
     <p><strong>Little Whamlings</strong> 
-        <span style="float:right;">2021 - Present</span><br>
+        <span style="float:right;">2021 - 2024</span><br>
         Demo: <a href="https://littlewhammo.itch.io/littlewhammo" target="_blank"> https://littlewhammo.itch.io/littlewhammo</a></p>
     <ul>
         <li>Co-developing an online multiplayer puzzle game in GameMaker Studio</li>
