--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
 
 <header>
     <h1>Abraham Goodman's Resume</h1>
-    <p>abgoodman1@wpi.edu | 304-319-3670 | Morgantown, WV</p>
+    <p>abgoodman1@wpi.edu | 304-319-3670 | Worcester, MA</p>
     <p><a href="https://abrahamgoodman.github.io/portfolio">Portfolio</a> | <a href="https://www.linkedin.com/in/abrahamgoodman" target="_blank">LinkedIn</a></p>
 </header>
 
