--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
 
 <header>
     <h1>Abraham Goodman's Portfolio</h1>
-    <p>abgoodman1@wpi.edu | 304-319-3670 | Morgantown, WV</p>
+    <p>abgoodman1@wpi.edu | 304-319-3670 | Worcester, MA</p>
     <p><a href="https://abrahamgoodman.github.io/resume">Resume</a> | <a href="https://www.linkedin.com/in/abrahamgoodman" target="_blank">LinkedIn</a></p>
 </header>
 
