--- a/portfolio.html
+++ b/portfolio.html
@@ -74,18 +74,18 @@
 					<div style="display: flex; justify-content: center; gap: 10px; flex-wrap: wrap;">
 						<div style="flex: 1; max-width: 50%; display: flex; flex-direction: column; gap: 10px;">
 							<video controls style="width: 100%; height: auto;">
-								<source src="Travelling With Taste - Trailer.mp4" type="video/mp4">
+								<source src="assets/Travelling With Taste - Trailer.mp4" type="video/mp4">
 							</video>
-							<img src="Game Architecture.png" alt="Single Image" style="width:800px; max-width:100%; height:auto;">
+							<img src="assets/Game Architecture.png" alt="Single Image" style="width:800px; max-width:100%; height:auto;">
 						</div>
 						<div style="flex: 1; max-width: 50%; display: flex; flex-direction: column; gap: 10px;">
-							<img src="Player Variables.png" alt="Single Image" style="width:800px; max-width:100%; height:auto;">
+							<img src="assets/Player Variables.png" alt="Single Image" style="width:800px; max-width:100%; height:auto;">
 						</div>
 					</div>
 					<br>
 					<div style="display: flex; justify-content: center; gap: 10px; flex-wrap: wrap;">
 						<div style="flex: 1; max-width: 100%; display: flex; flex-direction: column; gap: 10px;">
-							<img src="Player Movement.png" alt="Single Image" style="width:1600px; max-width:100%; height:auto;">
+							<img src="assets/Player Movement.png" alt="Single Image" style="width:1600px; max-width:100%; height:auto;">
 						</div>
 					</div>
                 </div>
