--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,8 @@
             </h2>
             <div id="collapseTravellingWithTaste" class="accordion-collapse collapse" aria-labelledby="headingTravellingWithTaste" data-bs-parent="#portfolioAccordion">
                 <div class="accordion-body">
-                    <p><strong>Beta:</strong> <a href="https://ratgoosesuitstudios.github.io/releases/" target="_blank">https://ratgoosesuitstudios.github.io/releases/</a></p>
-                    <p>Travelling With Taste is a stealth/puzzle game with unconventional movement developed over the course of 6 weeks in Unreal Engine. Our team consists of 7 people.
+                    <p><a href="https://ratgoosesuitstudios.github.io/releases/" target="_blank">https://ratgoosesuitstudios.github.io/releases/</a></p>
+                    <p>Travelling With Taste is a stealth/puzzle game with unconventional movement developed over the course of 6 weeks in Unreal Engine using Blueprints. The team consisted of 7 people.
 					<br><br>
 					I was specifically focused on programming the player, which is a suitcase that uses tank-style controls to move. The player can sprint to increase their speed, throw cheese to distract guards, and extend the suitcase handle to interact with the world and launch off of walls.</p>
                     <h4>Challenges:</h4>
@@ -92,6 +92,30 @@
             </div>
         </div>
 		
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingVVVVVVTool">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseVVVVVVTool" aria-expanded="false" aria-controls="collapseVVVVVVTool">
+                    VVVVVV Code Modification and Interface Tool
+                </button>
+            </h2>
+            <div id="collapseVVVVVVTool" class="accordion-collapse collapse" aria-labelledby="headingVVVVVVTool" data-bs-parent="#portfolioAccordion">
+                <div class="accordion-body">
+                    <p>VVVVVV is an open-source game by Terry Cavanagh written in C++. I created gameplay modifications to it and made a tool in GameMaker Studio to assist me in doing so.</p>
+                    <h4>Key Features:</h4>
+                    <ul>
+                        <li>New gameplay features created by modifying existing C++ source code</li>
+						<li>Created a framework for others to modify the game, approved by the developer</li>
+                        <li>Level editor created in GameMaker Studio</li>
+                        <li>Code import/export for rapid testing between VVVVVV and my editor</li>
+                    </ul>
+                    <h4>Visuals:</h4>
+					<div style="text-align: center; margin: 20px 0;">
+						<img src="assets/Gravity Engine.png" alt="Single Image" style="width:800px; max-width:100%; height:auto;">
+					</div>
+                </div>
+            </div>
+        </div>
+		
 		<div class="accordion-item">
             <h2 class="accordion-header" id="headingLittleWhamlings">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseLittleWhamlings" aria-expanded="false" aria-controls="collapseLittleWhamlings">
@@ -101,7 +125,9 @@
             <div id="collapseLittleWhamlings" class="accordion-collapse collapse" aria-labelledby="headingLittleWhamlings" data-bs-parent="#portfolioAccordion">
                 <div class="accordion-body">
                     <p><strong>Demo:</strong> <a href="https://littlewhammo.itch.io/littlewhammo" target="_blank">https://littlewhammo.itch.io/littlewhammo</a></p>
-                    <p>An online multiplayer puzzle game developed in GameMaker Studio where you can shoot a pellet to pick up an object, storing it. You can then shoot that object out somewhere else and create it in the world.</p>
+                    <p>An online multiplayer puzzle game developed in GameMaker Studio where you can shoot a pellet to pick up an object, storing it. You can then shoot that object out somewhere else and create it in the world.
+					<br><br>
+					I was the lead programmer, working with an artist.</p>
                     <h4>Key Features:</h4>
                     <ul>
                         <li>Online multiplayer system with rollback netcode</li>
@@ -123,29 +149,6 @@
 						<div style="flex: 1; max-width: 30%;">
 							<img src="assets/Little Whamlings 2.gif" alt="Tall GIF" style="width: 100%; height: 100%; object-fit: cover;">
 						</div>
-					</div>
-                </div>
-            </div>
-        </div>
-
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingVVVVVVTool">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseVVVVVVTool" aria-expanded="false" aria-controls="collapseVVVVVVTool">
-                    VVVVVV Code Modification and Interface Tool
-                </button>
-            </h2>
-            <div id="collapseVVVVVVTool" class="accordion-collapse collapse" aria-labelledby="headingVVVVVVTool" data-bs-parent="#portfolioAccordion">
-                <div class="accordion-body">
-                    <p>VVVVVV is an open-source game by Terry Cavanagh written in C++. I created gameplay modifications to it and made a tool in GameMaker Studio to assist me in doing so.</p>
-                    <h4>Key Features:</h4>
-                    <ul>
-                        <li>New gameplay features created by modifying existing C++ source code</li>
-                        <li>Level editor created in GameMaker Studio</li>
-                        <li>Code import/export for rapid testing between VVVVVV and my editor</li>
-                    </ul>
-                    <h4>Visuals:</h4>
-					<div style="text-align: center; margin: 20px 0;">
-						<img src="assets/Gravity Engine.png" alt="Single Image" style="width:800px; max-width:100%; height:auto;">
 					</div>
                 </div>
             </div>
@@ -177,7 +180,7 @@
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingProducerRole">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseProducerRole" aria-expanded="false" aria-controls="collapseProducerRole">
-                    Hamster Ball Blitz - Producer
+                    Hamster Ball Blitz – Producer
                 </button>
             </h2>
             <div id="collapseProducerRole" class="accordion-collapse collapse" aria-labelledby="headingProducerRole" data-bs-parent="#portfolioAccordion">
@@ -207,3 +210,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
