--- a/resume.html
+++ b/resume.html
@@ -99,6 +99,7 @@
     <ul>
         <li>Co-developing an online multiplayer puzzle game in GameMaker Studio</li>
         <li>Robust networking system to prevent latency from affecting the game</li>
+        <li>Multiplayer-compatible level editor</li>
     </ul>
 
     <p><strong>iPhone Shortcuts - iTunes Wrapped</strong></p>
@@ -114,4 +115,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
