--- a/resume.html
+++ b/resume.html
@@ -69,7 +69,7 @@
     <h3><strong>EXPERIENCE</strong></h3>
 
     <p><strong>Travelling With Taste (Unreal Engine) – Programmer</strong> 
-        <span style="float:right;">Spring Semester, 2025</span></p>
+        <span style="float:right;">Spring Semester, 2025</span><br>
         <a href="https://codazen.itch.io/travelling-with-taste" target="_blank"> https://codazen.itch.io/travelling-with-taste</a></p>
     <ul>
         <li>One of three programmers on a game in Unreal Engine using Blueprints</li>
@@ -115,5 +115,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
