--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
             </h2>
             <div id="collapseTravellingWithTaste" class="accordion-collapse collapse" aria-labelledby="headingTravellingWithTaste" data-bs-parent="#portfolioAccordion">
                 <div class="accordion-body">
-                    <p><a href="https://ratgoosesuitstudios.github.io/releases/" target="_blank">https://ratgoosesuitstudios.github.io/releases/</a></p>
+                    <p><a href="https://codazen.itch.io/travelling-with-taste" target="_blank">https://codazen.itch.io/travelling-with-taste</a></p>
                     <p>Travelling With Taste is a stealth/puzzle game with unconventional movement developed over the course of 6 weeks in Unreal Engine using Blueprints. The team consisted of 7 people.
 					<br><br>
 					I was specifically focused on programming the player, which is a suitcase that uses tank-style controls to move. The player can sprint to increase their speed, throw cheese to distract guards, and extend the suitcase handle to interact with the world and launch off of walls.</p>
@@ -180,7 +180,7 @@
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingProducerRole">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseProducerRole" aria-expanded="false" aria-controls="collapseProducerRole">
-                    Hamster Ball Blitz – Producer
+                    Hamster Ball Blitz
                 </button>
             </h2>
             <div id="collapseProducerRole" class="accordion-collapse collapse" aria-labelledby="headingProducerRole" data-bs-parent="#portfolioAccordion">
@@ -210,4 +210,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
