--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
             <div id="collapseTravellingWithTaste" class="accordion-collapse collapse" aria-labelledby="headingTravellingWithTaste" data-bs-parent="#portfolioAccordion">
                 <div class="accordion-body">
                     <p><a href="https://codazen.itch.io/travelling-with-taste" target="_blank">https://codazen.itch.io/travelling-with-taste</a></p>
-                    <p>Travelling With Taste is a stealth/puzzle game with unconventional movement developed over the course of 6 weeks in Unreal Engine using Blueprints. The team consisted of 7 people.
+                    <p>Travelling With Taste is a stealth/puzzle game with unconventional movement developed over the course of 6 weeks in Unreal Engine using Blueprints. The team consisted of 7 people, and we showcased the game at Pax East 2025.
 					<br><br>
 					I was specifically focused on programming the player, which is a suitcase that uses tank-style controls to move. The player can sprint to increase their speed, throw cheese to distract guards, and extend the suitcase handle to interact with the world and launch off of walls.</p>
                     <h4>Challenges:</h4>
@@ -210,5 +210,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
