--- a/portfolio.html
+++ b/portfolio.html
@@ -157,7 +157,7 @@
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingiTunesWrapped">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseiTunesWrapped" aria-expanded="false" aria-controls="collapseiTunesWrapped">
-                    iPhone Shortcuts – iTunes Wrapped
+                    iTunes Wrapped
                 </button>
             </h2>
             <div id="collapseiTunesWrapped" class="accordion-collapse collapse" aria-labelledby="headingiTunesWrapped" data-bs-parent="#portfolioAccordion">
@@ -210,6 +210,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
