--- a/resume.html
+++ b/resume.html
@@ -102,7 +102,7 @@
         <li>Multiplayer-compatible level editor</li>
     </ul>
 
-    <p><strong>iPhone Shortcuts - iTunes Wrapped</strong></p>
+    <p><strong>iTunes Wrapped</strong></p>
     <ul>
         <li>Created a series of programs using the iPhone Shortcuts language to perform data collection and analysis to create a summary of music listened to on iTunes, mimicking Spotify Wrapped</li>
     </ul>
@@ -115,6 +115,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
