--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,7 @@
     <p><strong>Artificial Intelligence For Interactive Media and Games – Teaching Assistant</strong> 
         <span style="float:right;">Fall Semester, 2025</span><br>
     <ul>
-        <li>Helped students understand AI concepts and how to apply them to games/li>
+        <li>Helped students understand AI concepts and how to apply them to games</li>
     </ul>
     
     <p><strong>Travelling With Taste (Unreal Engine) – Programmer</strong> 
@@ -121,6 +121,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
