--- a/resume.html
+++ b/resume.html
@@ -63,7 +63,7 @@
     <h3><strong>TECHNICAL SKILLS</strong></h3>
     <ul>
         <li><strong>Programming languages:</strong> Python, Java, C++, Unreal Engine Blueprints, GameMaker Language, MATLAB, iOS Shortcuts</li>
-        <li><strong>Game Engines & Tools:</strong> Unreal Engine, Unity, GameMaker Studio, Git/Github, Jira, MATLAB</li>
+        <li><strong>Tools:</strong> Unreal Engine, Unity, Git/Github, Visual Studio, Jira, MATLAB, GameMaker Studio</li>
     </ul>
 
     <h3><strong>EXPERIENCE</strong></h3>
@@ -123,6 +123,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
