--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
         <span style="float:right;">September 2020 – May 2024</span><br>
         <strong>Brandeis University</strong>, Waltham, MA</p>
     
-    <p><strong>Mathematics and Computer Science Electives: </strong>Real Analysis, Stochastic Processes and Models, Numerical Methods and Big Data, Artificial Intelligence, Computer Security</p>
+    <p><strong>Mathematics and Computer Science Electives: </strong>Real Analysis, Stochastic Processes and Models, Numerical Methods and Big Data, Artificial Intelligence, Computer Security, Scientific Data Processing in MATLAB</p>
     
     <h3><strong>TECHNICAL SKILLS</strong></h3>
     <ul>
@@ -122,6 +122,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
