--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
     
     <h3><strong>TECHNICAL SKILLS</strong></h3>
     <ul>
-        <li><strong>Programming languages:</strong> Python, Java, C++, Unreal Engine Blueprints, GameMaker Language, MATLAB, iOS Shortcuts</li>
+        <li><strong>Programming languages:</strong> Python (7 years), Java (6 years), C++ (1 year), Unreal Engine Blueprints, GameMaker Language, MATLAB, iOS Shortcuts</li>
         <li><strong>Tools:</strong> Unreal Engine, Unity, Git/Github, Visual Studio, Jira, MATLAB, GameMaker Studio</li>
     </ul>
 
@@ -122,6 +122,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
